fixing toolbar z-index = -1 so post would work

--- a/src/app/post-jobs/post-jobs.page.scss
+++ b/src/app/post-jobs/post-jobs.page.scss
@@ -16,11 +16,11 @@ ion-card{
   --ion-background-color: #F19953;
 }
 
-for menu navigation
+//for menu navigation
 .bottom-toolbar {
-    position: sticky;
-    // z-index: 2;
-    padding-top: 10px;
-    padding-bottom: 0px;
-    margin-bottom: 0px;
+//     position: sticky;
+    z-index: -1;
+//     padding-top: 10px;
+//     padding-bottom: 0px;
+//     margin-bottom: 0px;
   }
